--- a/css/styles.css
+++ b/css/styles.css
@@ -1,37 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,400italic,300,300italic,500,700");
-
-@font-face {
-    font-family: "Gotham";
-    src: local("Gotham"), url("../fonts/Gotham/Gotham-Medium.otf") format("opentype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Gotham-Book";
-    src: local("Gotham-Book"), url("../fonts/Gotham/Gotham-Book.otf") format("opentype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Gotham-Italic";
-    src: local("Gotham-Italic"), url("../fonts/Gotham/Gotham-MediumItalic.otf") format("opentype");
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: "Gotham-Bold";
-    src: local("Gotham-Bold"), url("../fonts/Gotham/Gotham-Bold.otf") format("opentype");
-    font-weight: bold;
-}
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700');
 
 /* - - - General - - - */
 
 .slides, body {
     background: rgb(31, 66, 86);
-    font-family:"Gotham-Bold", Impact, sans-serif;
+    font-family:"Montserrat", sans-serif;
 }
 
 #gdi .uppercase { text-transform: uppercase; }
@@ -120,7 +94,7 @@
 /* - - - Meta - - - */
 
 #gdi .meta {
-    font-family:"Gotham", Impact, sans-serif;
+    font-family:"Montserrat", sans-serif;
     font-size:26pt;
     line-height:27pt;
 }
